--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.35.0",
+    "bootstrap": "^5.2.0",
     "next": "12.2.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
